# Spoti-fam

./: CMakeLists.txt  Login.cpp  Login.h  Quiz.cpp  Quiz.h  README.md  Result.cpp  Result.h
resources/: MARKDOWN.md
